main/default/objects/Expense_Line_Item__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The vehicle parts the line item is related to</description>
    <inlineHelpText>The vehicle parts the line item is related to</inlineHelpText>
    <label>Parts</label>
    <referenceTo>Vehicle_Part__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>